# Vector3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
resources/shaders/: FullScreenQuadShader.glsl  GridShader.glsl  PhongShader.frag  PhongShader.glsl  PhongShader.vert  ShadowMapShader.glsl  SimpleShader.glsl  UnlitShader.frag  UnlitShader.glsl  UnlitShader.vert
resources/vehicle_model/sedan/: Sedan.json  sedan_chassis_vis.mtl  sedan_rim.mtl  sedan_tire.mtl
resources/vehicle_model/sedan/POV_Ray/: sedan_chassis_vis.inc  sedan_chassis_vis_mat.inc  sedan_rim.inc  sedan_rim_mat.inc  sedan_tire.inc  sedan_tire_mat.inc
resources/vehicle_model/sedan/brake/: Sedan_BrakeShafts.json  Sedan_BrakeSimple.json
resources/vehicle_model/sedan/chassis/: Sedan_Chassis.json
resources/vehicle_model/sedan/driveline/: Sedan_Driveline2WD.json
resources/vehicle_model/sedan/driver/: Sedan_AIDriver.json
resources/vehicle_model/sedan/powertrain/: Sedan_AutomaticTransmissionSimpleMap.json  Sedan_EngineShafts.json  Sedan_EngineSimpleMap.json  Sedan_ManualTransmissionShafts.json
resources/vehicle_model/sedan/steering/: Sedan_RackPinion.json
resources/vehicle_model/sedan/suspension/: Sedan_DoubleWishbone.json  Sedan_MultiLink.json
resources/vehicle_model/sedan/tire/: Sedan_Pac02Tire.json  Sedan_RigidTire.json  Sedan_TMeasyTire.json
resources/vehicle_model/sedan/vehicle/: Sedan_Vehicle.json
resources/vehicle_model/sedan/wheel/: Sedan_Wheel.json
scripts/: .cmakeignore  generate_cmakelists.py  generate_cmakelistsV2.py
src/: CMakeLists.txt  DefinitionCore.hpp  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  ModelManager.hpp  asset.cpp  asset.h  camera.hpp  component.cpp  component.h  engine.cpp  engine.h  entity.cpp  entity.h  glad.c  main.cpp  object_ptr.hpp  scene.cpp  scene.h  serialization.hpp  transform.cpp  transform.h  utils.hpp  window.cpp  window.h
src/demos/: demo_common.h  demo_defines.h  demo_vehicle.hpp
src/editor/: ComponentRegistry.cpp  ComponentRegistry.h  Editor.cpp  Editor.h
src/graphics_backend/: GraphicsBackend.h  VulkanBackend.cpp  VulkanBackend.h
src/input/: InputDevice.hpp  InputKeyCodes.hpp  InputKeys.hpp  InputManager.h  KeyboardDevice.cpp  KeyboardDevice.h  KeyboardDevice.hpp
src/physics/: ConstrainLink.cpp  ConstrainLink.h  DefinitionPhysics.hpp  Vehicle.cpp  Vehicle.h  VehicleInteractiveController.cpp  VehicleInteractiveController.h  collider.cpp  collider.h  physics.cpp  physics.h  rigidbody.cpp  rigidbody.h  test_chorno.hpp  utils.hpp
src/rendering/: GizmosManager.cpp  GizmosManager.h  graphics_backend.cpp  graphics_backend.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  model.h  null_graphics_backend.hpp  opengl_backend.cpp  opengl_backend.h  primitives.hpp  rendering_def.h  shader.cpp  shader.h  vulkan_backend.cpp  vulkan_backend.h
src/utils/: CMakeLists.txt  definitions.hpp  exception.hpp  keyed_stable_collection.hpp  utils.hpp  vector_ptr.hpp
